--- a/rdfgears-core/pom.xml
+++ b/rdfgears-core/pom.xml
@@ -87,7 +87,12 @@
       <artifactId>staxutils</artifactId>
       <version>unknown-version</version>
     </dependency> 
-    
+	
+	<dependency>
+    	<groupId>org.apache.jena</groupId>
+    	<artifactId>jena-core</artifactId>
+    	<version>2.7.3</version>
+    </dependency>    
     
   </dependencies>
 </project>
