--- a/rdfgears-rest/src/main/webapp/WEB-INF/classes/rdfgears.config
+++ b/rdfgears-rest/src/main/webapp/WEB-INF/classes/rdfgears.config
@@ -1,6 +1,6 @@
 # workflow_path_list specifies a ':'-separated list of paths 
 # where the engine tries to find its workflows.
-workflow_path_list = /opt/apache-tomcat-6.0.32/temp/rdfgears/workflows:/tmp/rdfgears/workflows:.:./workflows/
+workflow_path_list = ../temp/rdfgears/workflows:/tmp/rdfgears/workflows:.:./workflows/
 
 
 # page size for remote queries
