--- a/rdfgears-core/rdfgears.config
+++ b/rdfgears-core/rdfgears.config
@@ -1,6 +1,6 @@
 # workflow_path_list specifies a ':'-separated list of paths 
 # where the engine tries to find its workflows.
-workflow_path_list = /:.:./workflows/:/tmp/rdfgears/workflows/
+workflow_path_list = /:.:./workflows/:/tmp/rdfgears/workflows/:../temp/rdfgears/data/workflows:../temp/rdfgears/workflows
 
 
 # page size for remote queries
