--- a/rdfgears-cli/pom.xml
+++ b/rdfgears-cli/pom.xml
@@ -13,7 +13,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -21,20 +23,40 @@
       <scope>test</scope>
     </dependency>
     
+
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-core</artifactId>
       <version>0.1-SNAPSHOT</version>
+	  <scope>compile</scope>
     </dependency>
+	
+	<dependency>
+       <groupId>uk.co.flamingpenguin.jewelcli</groupId>
+       <artifactId>jewelcli</artifactId>
+       <version>0.58</version>
+     </dependency>
     
-    <!-- also import the correct plugins --> 
+<!--    
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-plugins</artifactId>
       <version>0.1-SNAPSHOT</version>
+	  <scope>runtime</scope>
     </dependency>
-    
-    
+ -->   
+  	<dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+    </dependency>
+
+	<dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
+      <version>2.6.4</version>
+    </dependency>
+  
   </dependencies>
   <build>
     <plugins>
