--- a/rdfgears-core/pom.xml
+++ b/rdfgears-core/pom.xml
@@ -48,6 +48,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
   <dependencies>
   
     <dependency>
@@ -56,10 +57,41 @@
       <version>4.8.2</version>
     </dependency>
     
+
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+	
+	<dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>
+    </dependency>
+
+	<dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+    </dependency>
+
+	<dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.5.8</version>
+    </dependency>
+	
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
       <version>2.8.8</version>
+    </dependency>
+    
+	<dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
+      <version>2.6.4</version>
     </dependency>
     
     <dependency>
@@ -76,23 +108,25 @@
       <version>4.1.10</version>
     </dependency>
     
-    <dependency>
+<!--    <dependency>
       <groupId>uk.co.flamingpenguin.jewelcli</groupId>
       <artifactId>jewelcli</artifactId>
       <version>0.58</version>
     </dependency>
 
+	<dependency>
+    	<groupId>org.apache.jena</groupId>
+    	<artifactId>jena-core</artifactId>
+    	<version>2.7.3</version>
+    </dependency>    
+
+-->
     <dependency>
       <groupId>staxutils</groupId>
       <artifactId>staxutils</artifactId>
       <version>unknown-version</version>
     </dependency> 
 	
-	<dependency>
-    	<groupId>org.apache.jena</groupId>
-    	<artifactId>jena-core</artifactId>
-    	<version>2.7.3</version>
-    </dependency>    
     
   </dependencies>
 </project>
