--- a/rdfgears-plugins/pom.xml
+++ b/rdfgears-plugins/pom.xml
@@ -51,8 +51,42 @@
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-core</artifactId>
       <version>0.1-SNAPSHOT</version>
+	  <scope>compile</scope>
+    </dependency>
+<!--
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+-->
+    
+	<dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>arq</artifactId>
+      <version>2.8.8</version>
     </dependency>
     
+	<dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>jena</artifactId>
+      <version>2.6.4</version>
+    </dependency>
+    
+	<dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>
+    </dependency>
+
+	<dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
+    </dependency>
+
     <!-- dependency for twitter profile thingy   -->
     <dependency>
       <groupId>net.arnx.jsonic</groupId>
@@ -61,13 +95,13 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>stax</groupId>
+      <artifactId>stax-api</artifactId>
+      <version>1.0.1</version>
     </dependency>
+
 	
-	<dependency>
+<!--	<dependency>
     	<groupId>org.apache.jena</groupId>
     	<artifactId>jena-core</artifactId>
     	<version>2.7.3</version>
@@ -78,6 +112,6 @@
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.21</version>
     </dependency>
-
+-->
   </dependencies>
 </project>
