--- a/rdfgears-ui/pom.xml
+++ b/rdfgears-ui/pom.xml
@@ -50,8 +50,8 @@
    	<dependency>
 	     <groupId> com.allen-sauer.gwt.log</groupId>
 	     <artifactId>gwt-log</artifactId>
-	     <version>3.1.7</version>
-	     <scope>provided</scope>
+	     <version>3.1.8</version>
+	     <scope>compile</scope>
    	</dependency>
    	
     <dependency>
@@ -138,6 +138,7 @@
           </execution>
         </executions>
         <configuration>
+		  <webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
           <webappDirectory>${webappDirectory}</webappDirectory>
         </configuration>
       </plugin>
