--- a/rdfgears-cli/pom.xml
+++ b/rdfgears-cli/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-core</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
 	  <scope>compile</scope>
     </dependency>
 	
@@ -40,7 +40,7 @@
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-plugins</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
 	  <scope>runtime</scope>
     </dependency>
  -->   
