--- a/rdfgears-plugins/pom.xml
+++ b/rdfgears-plugins/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-core</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
 	  <scope>compile</scope>
     </dependency>
 <!--
