--- a/rdfgears-ui-deripipes/pom.xml
+++ b/rdfgears-ui-deripipes/pom.xml
@@ -67,14 +67,14 @@
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-core</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     
     <!-- also import the correct plugins --> 
     <dependency>
       <groupId>nl.tudelft.rdfgears</groupId>
       <artifactId>rdfgears-plugins</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     
     <dependency>
