--- a/rdfgears-plugins/pom.xml
+++ b/rdfgears-plugins/pom.xml
@@ -51,6 +51,13 @@
       <version>${project.version}</version>
 	  <scope>compile</scope>
     </dependency>
+    
+          <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>[3.0,)</version>
+       </dependency>
+    
 <!--
 
     <dependency>
