Removing local lib files and updating pom variables

--- a/rdfgears-cli/pom.xml
+++ b/rdfgears-cli/pom.xml
@@ -24,7 +24,7 @@
     
 
     <dependency>
-      <groupId>nl.tudelft.rdfgears</groupId>
+      <groupId>${parent.groupId}</groupId>
       <artifactId>rdfgears-core</artifactId>
       <version>${project.version}</version>
 	  <scope>compile</scope>
