--- a/pom.xml
+++ b/pom.xml
@@ -125,13 +125,13 @@
   </properties>
 
   <repositories>
-    <repository>
+  <!--  <repository>
       <id>central</id>
       <name>Maven Central repository</name>
       <url>http://repo.maven.apache.org/maven2/</url>
       <layout>default</layout>
     </repository>
-    
+    -->
     <repository>
       <id>oracleReleases</id>
       <name>Oracle Released Java Packages</name>
