--- a/rdfgears-ui-deripipes/pom.xml
+++ b/rdfgears-ui-deripipes/pom.xml
@@ -65,14 +65,14 @@
   <dependencies>
     
     <dependency>
-      <groupId>${parent.groupId}</groupId>
+      <groupId>${project.parent.groupId}</groupId>
       <artifactId>rdfgears-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     
     <!-- also import the correct plugins --> 
     <dependency>
-      <groupId>${parent.groupId}</groupId>
+      <groupId>${project.parent.groupId}</groupId>
       <artifactId>rdfgears-plugins</artifactId>
       <version>${project.version}</version>
     </dependency>
