--- a/rdfgears-ui/src/main/webapp/WEB-INF/rdf-gears-ui.config
+++ b/rdfgears-ui/src/main/webapp/WEB-INF/rdf-gears-ui.config
@@ -2,6 +2,10 @@
 #
 #
 
-rdfgears.base.path = ../rdfgears
+rdfgears.base.path = ../rdfgears/
+workflows.path = data/workflows
+processors.path = data/processors
+functions.path = data/functions
+
 rdfgears.rest.URL = /rdfgears-rest
 
