--- a/rdfgears-ui/src/main/webapp/WEB-INF/rdf-gears-ui.config
+++ b/rdfgears-ui/src/main/webapp/WEB-INF/rdf-gears-ui.config
@@ -3,9 +3,9 @@
 #
 
 rdfgears.base.path = ../rdfgears/
-workflows.path = data/workflows
-processors.path = data/processors
-functions.path = data/functions
+workflows.path = data/workflows/
+processors.path = data/processors/
+functions.path = data/functions/
 
 rdfgears.rest.URL = /rdfgears-rest
 
